fix: blog title on mobile

--- a/src/scss/templates/_posts.scss
+++ b/src/scss/templates/_posts.scss
@@ -116,6 +116,10 @@
 			max-width: none;
 			grid-column: 1 / -1;
 
+			@screen max-tablet-portrait {
+				@apply px-0;
+			}
+
 			.page-title,
 			.archive-description {
 				@apply mx-auto px-0;
